Sizing fixes. Works well on iphone 13 mini now

--- a/src/app.css
+++ b/src/app.css
@@ -52,8 +52,9 @@ body {
   place-items: center;
   min-width: 320px;
   height: 100vh;
-  overflow: none;
+  /* overflow: hidden; */
   box-sizing:border-box;
+
 }
 
 h1 {
